Update modernizer to 1.14.0 (fix 30 violations) and gradle-git-properties to 4.0.1 (#782)